# hello

./: .gitignore  CLAUDE.md  auto.yaml  create_claude_usage.py  create_yaml.py  plan.md  results.md  transcript_temp.en.vtt  transcript_temp.live_chat.json  youtube_videos.yaml
.claude/: settings-old.json  settings.local.json
.claude/hooks/: README_STOP_HOOK.md  simple_sysout.py  task_manager_stop_hook.py
.github/prompts/: merge_delete_feature_branches.prompt.md
.github/workflows/: auto-merge-claude-branches.yml
company/: 3M.md  ADP.md  AMD.md  ASML.md  Accenture.md  Adobe.md  AkamaiTechnologies.md  Amazon.md  Amphenol.md  AnalogDevices.md  Anthropic.md  Anysphere.md  Applied_Materials.md  AristaNetworks.md  Autodesk.md  Avanade.md  BABA.md  BYD.md  BlackRock.md  Boeing.md  Broadcom.md  CDW.md  CadenceDesignSystems.md  Caterpillar.md  Cintas.md  Cisco.md  CognitionLabs.md  Cognizant.md  Coinbase.md  Corning.md  CrowdStrike.md  Databricks.md  Datadog.md  Deere.md  DellTechnologies.md  Duolingo.md  Dynatrace.md  EPAMSystems.md  Eaton.md  EmersonElectric.md  (+87 more)
comparison/: Microsoft.md  OpenAI.md  agentic_workflow_platforms.md  data_platforms.md  java_dependency_management.md  java_logging.md  python_asgi_servers.md
java/: .gitignore
python/: .gitignore  README.md  main_claude_api_usage.py  main_openrouter.py  main_polars.py  main_scikit_learn.py  main_spacy.py  main_timezone_date_handling.py
python/aws_bedrock/: README.md  main_aws_bedrock.py  pyproject.toml
python/pytest/: README.md  main_pytest.py  pyproject.toml
youtube/: temp.en.vtt
(+905 files in other folders)
