[project]
name = "pytest-illustration"
version = "0.1.0"
description = "Comprehensive pytest testing framework demonstration"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "fast: marks tests as fast",
]
